fix maven build, add clickhouse grammar